// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div>
  <div
    class="sc-kAycRU fUIZqT"
  >
    <div>
      <div
        class="sc-eldOKa drCGwU"
      >
        <div>
          <div
            class="sc-gEvDqW sc-eqUzNf juyGmH cnAvcW"
          >
            mfa.email.explain
          </div>
          <form
            class="sc-dLNtp cYoyeH"
            novalidate=""
          >
            <button
              class="sc-cPiJYC hoKIxj"
              data-testid="submit"
              type="submit"
            >
              mfa.register.email
            </button>
          </form>
        </div>
        <div
          class="sc-dcJtft iEKxUi"
        >
          <span />
        </div>
        <div>
          <div
            class="sc-gEvDqW sc-eqUzNf juyGmH cnAvcW"
          >
            mfa.phoneNumber.explain
          </div>
          <form
            class="sc-dLNtp cYoyeH"
            novalidate=""
          >
            <div
              class="sc-dhKdPU jiBjdW"
            >
              <label
                class="sc-jXbVAB kkfgdT"
                for="phone_number"
              >
                phoneNumber
              </label>
              <div
                class="sc-eDPFhE pJthG"
              >
                <input
                  autocomplete="tel"
                  class="sc-kpDprT eaxOem"
                  data-testid="phone_number"
                  id="phone_number"
                  labels="[object Object]"
                  name="phone_number"
                  placeholder="phoneNumber"
                  required=""
                  type="tel"
                  value=""
                />
              </div>
            </div>
            <button
              class="sc-cPiJYC hoKIxj"
              data-testid="submit"
              type="submit"
            >
              mfa.register.phoneNumber
            </button>
          </form>
        </div>
      </div>
      <div
        class="sc-eldOKa drCGwU"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div>
  <div
    class="sc-kAycRU fUIZqT"
  >
    <div>
      <div
        class="sc-eldOKa drCGwU"
      >
        <div
          class="sc-dcJtft iEKxUi"
        >
          <span />
        </div>
        <div>
          <form
            class="sc-dLNtp cYoyeH"
            novalidate=""
          >
            <div
              class="sc-dhKdPU jiBjdW"
            >
              <label
                class="sc-jXbVAB kkfgdT"
                for="phone_number"
              >
                phoneNumber
              </label>
              <div
                class="sc-eDPFhE pJthG"
              >
                <input
                  autocomplete="tel"
                  class="sc-kpDprT eaxOem"
                  data-testid="phone_number"
                  id="phone_number"
                  labels="[object Object]"
                  name="phone_number"
                  placeholder="phoneNumber"
                  required=""
                  type="tel"
                  value=""
                />
              </div>
            </div>
            <button
              class="sc-cPiJYC hoKIxj"
              data-testid="submit"
              type="submit"
            >
              mfa.register.phoneNumber
            </button>
          </form>
        </div>
      </div>
      <div
        class="sc-eldOKa drCGwU"
      >
        <div>
          <form
            class="sc-dLNtp cYoyeH"
            novalidate=""
          >
            <button
              class="sc-cPiJYC hoKIxj"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.email
            </button>
          </form>
        </div>
        <div
          class="sc-dcJtft iEKxUi"
        >
          <span />
        </div>
        <div>
          <form
            class="sc-dLNtp cYoyeH"
            novalidate=""
          >
            <button
              class="sc-cPiJYC hoKIxj"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.phoneNumber
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
